@@ -26,6 +26,7 @@ StorageLoader: fixed "\" in fields acts as an escape character for Postgres (#32
 StorageLoader: added ability to --skip analyze (#335)
 StorageLoader: moved VACUUM SORT ONLY to a --include step (#321)
 StorageLoader: added COMPROWS to config and --include compupdate option (#344)
+StorageLoader: changed Postgres VACUUM FULL to VACUUM (#357)
 
 Version 0.8.9 (2013-09-05)
 --------------------------
